--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,18 @@
+python-3.11.9
 pandas==2.2.3
 numpy==1.26.4
 scikit-learn==1.5.1
-matplotlib==3.10.0
+matplotlib==3.9.0
 seaborn==0.13.2
-shap==0.45.1
-imblearn==0.0
-streamlit==1.44.1
+shap==0.46.0
+streamlit==1.36.0
 xgboost==2.0.3
 lightgbm==4.6.0
 catboost==1.2.8
-kaleido==1.0.0
+kaleido==0.2.1
 statsmodels==0.14.4
 joblib==1.4.2
-clust-learn==1.5.1
+
 
 
 
