--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-python==3.11.9
+python-3.11.9
 pandas==2.2.3
 numpy==1.26.4
 scikit-learn==1.5.1
@@ -12,6 +12,7 @@ catboost==1.2.8
 kaleido==0.2.1
 statsmodels==0.14.4
 joblib==1.4.2
+
 
 
 
